@@ -2537,6 +2537,14 @@ def ticklabel_format(**kwargs):
 
 # This function was autogenerated by boilerplate.py.  Do not edit as
 # changes will be lost
+@docstring.copy_dedent(Axes.locator_params)
+def locator_params(axis='both', tight=False, **kwargs):
+    ret =  gca().locator_params(axis, tight, **kwargs)
+    draw_if_interactive()
+    return ret
+
+# This function was autogenerated by boilerplate.py.  Do not edit as
+# changes will be lost
 def autumn():
     '''
     set the default colormap to autumn and apply to current image if any.
